--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,6 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation group: 'org.json', name: 'json', version: '20190722'
+	implementation group: 'org.json', name: 'json', version: '20190722'  //aggiunta delle dipendenze per la libreria json-simple.jar
 	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 }
